syntax = "proto3";

option go_package = "../proto";

package main;

service Authentication {
  rpc GetAccount (GetAccountRequest) returns (GetAccountResponse);
}

message GetAccountRequest {
  string name = 1;
}

message GetAccountResponse {
  string name = 1;
  string email = 2;
}